# extracao-sap

./: .gitignore  README.md  pyproject.toml
src/: config.py  export_excel.py  extract.py  main.py  send_email.py
src/sql/: fisc_ptfis_concluidas.sql  rel_os_aberto.sql
tests/: test_connection.py  test_export_excel.py  test_extract.py  test_send_email.py
